# kworker

./: .gitignore  README.md  oh_bios.md  ohsl.md
IoTDB/liteos_m/: PRD_SPEC_liteos_m.md
filemanager/: build-profile.json5
filemanager/AppScope/: app.json5
filemanager/entry/src/main/: module.json5
kaihong-secure-boot/: 02-现状分析.md  03-架构设计.md  06-运维与管理.md  README.md
kh_bios/: README.md
kh_bios/uboot/: BUILD.gn  build_uboot.sh
kh_bios/uboot/configs/: khdvk_rk3568_a.config  khdvk_rk3568_a_defconfig
kh_bios/uboot/dts/: khdvk_rk3568_a.dts
kh_bios/uboot_bios/core/: kh_bios.c  kh_bios_boot.c  kh_bios_env.c  kh_bios_hotkey.c  kh_bios_ui_draw.c
kh_bios/uboot_bios/include/: kh_bios_menu.h  kh_bios_pages.h
kh_bios/uboot_bios/patches/: rockchip_video_fb_header.patch
kh_bios/uboot_bios/scripts/: integrate_kh_bios.sh
kh_terminal/: README.md  build-profile.json5
kh_terminal/AppScope/: app.json5
kh_terminal/entry/: build-profile.json5
kh_terminal/entry/src/main/: module.json5
kh_terminal/entry/src/mock/: Libentry.mock.ets
khsl/: .gitignore  KHSL_Architecture_Plan.md  config.json  push_and_test.bat  push_and_test.sh  push_khsl.bat  push_khsl.sh  subsystem_config.json  如何添加到L2基线产品.txt
khsl/.githooks/: pre-commit
khsl/bash/: BUILD.gn  build_bash.sh
khsl/distribution/: KHSL_README.md  khsl_init_ubuntu.sh  测试指令.md
khsl/docs/: KHSL_Ubuntu_Architecture.md  KHSL技术架构.md
khsl/kh_term_daemon/: BUILD.gn  kh_term_daemon.cfg  khsl_core.cpp  khsl_core.h  khsl_net_setup.sh  main.cpp
khsl/khsl/: BUILD.gn  main.c
khsl/khsl/etc/: motd
oh-secure-boot/: 01-方案概述.md  02-现状分析.md  04-分阶段落地路线.md  05-Phase0改动清单.md  06-运维与管理.md  07-风险与约束.md  08-U-Boot-BIOS.md  README.md
oh_bios/: README.md
oh_bios/doc/: 03-架构设计.md  05-Phase0改动清单.md  08-U-Boot-BIOS.md
oh_bios/uboot/: BUILD.gn
oh_bios/uboot/bios/: Makefile  kh_bios_board.c  kh_bios_product.h
oh_bios/uboot/rkbin/RKTRUST/: KHDVK_RK3568_A_TRUST.ini
oh_bios/uboot/uboot/: build_uboot.sh
oh_bios/uboot_bios/: README.md
oh_bios/uboot_bios/core/: Kconfig  Makefile  kh_bios_board_weak.c  kh_bios_menu.c  kh_bios_security.c  kh_bios_ui.c
oh_bios/uboot_bios/include/: kh_bios.h  kh_bios_board.h  kh_bios_boot.h  kh_bios_env.h  kh_bios_hotkey.h  kh_bios_ui_draw.h
oh_bios/uboot_bios/patches/: rockchip_video_fb.patch
(+19 files in other folders)
